- Fixed bug where background of learn would be cropped when there aren't enough people.  - Fixed bug causing crash when no people in DB yet.

--- a/src/app/learn/learn.style.css
+++ b/src/app/learn/learn.style.css
@@ -13,6 +13,7 @@
     url(/assets/img/bm-sunset-silhouettes.jpg) no-repeat fixed;
   background-size: cover;
   overflow-y: scroll;
+  min-height: 100%;
 }
 
 .person-container {
